--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
+    "method-override": "^3.0.0",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
